integrating classes and server - server broken :(

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,7 +67,7 @@
             android:theme="@style/AppTheme" />
 
         <activity
-            android:name=".Database"
+            android:name=".Server.Database"
             android:theme="@style/AppTheme"/>
 
         <service android:name=".Client.BoundService"/>
