Server working with two clients via IntentService

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,6 +71,7 @@
             android:theme="@style/AppTheme"/>
 
         <service android:name=".Client.BoundService"/>
+        <service android:name=".ServerService"/>
     </application>
 
 </manifest>
