--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
 
 
     <application
+        android:name=".App.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -60,6 +61,10 @@
 
         <activity
             android:name=".RegisterActivity"
+            android:theme="@style/AppTheme" />
+
+        <activity
+            android:name=".Test.TestDatabaseActivity"
             android:theme="@style/AppTheme" />
 
 
