--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@android:style/Theme.Holo.Light">
         <activity
             android:name=".Activities.SignIn.LoginActivity"
             android:label="@string/app_name">
@@ -28,48 +28,56 @@
 
         <activity
             android:name=".Activities.HomeActivity"
-            android:theme="@style/AppTheme"/>
+            android:theme="@android:style/Theme.Holo.Light"/>
 
         <activity
             android:name=".Activities.Notices.NoticeActivity"
-            android:theme="@style/AppTheme"/>
+            android:theme="@android:style/Theme.Holo.Light"/>
 
         <activity
             android:name=".Activities.Notices.NoticeComposeActivity"
-            android:theme="@style/AppTheme" />
+            android:theme="@android:style/Theme.Holo.Light"/>
 
         <activity
-            android:name=".Activities.StatisticsActivity"
-            android:theme="@style/AppTheme"/>
+            android:name=".Activities.Statistics.StatisticsActivity"
+            android:theme="@android:style/Theme.Holo.Light"/>
 
         <activity
             android:name=".Activities.LogActivity"
-            android:theme="@style/AppTheme"/>
+            android:theme="@android:style/Theme.Holo.Light"/>
 
         <activity
             android:name=".Activities.CalendarActivity"
-            android:theme="@style/AppTheme"/>
+            android:theme="@android:style/Theme.Holo.Light"/>
 
         <activity
             android:name=".Activities.GalleryActivity"
-            android:theme="@style/AppTheme"/>
+            android:theme="@android:style/Theme.Holo.Light"/>
 
         <activity
             android:name=".Activities.Members.MembersActivity"
-            android:theme="@style/AppTheme"/>
+            android:theme="@android:style/Theme.Holo.Light"/>
 
 
         <activity
             android:name=".Activities.SignIn.RegisterActivity"
-            android:theme="@style/AppTheme" />
+            android:theme="@android:style/Theme.Holo.Light"/>
 
         <activity
             android:name=".Test.TestDatabaseActivity"
-            android:theme="@style/AppTheme" />
+            android:theme="@android:style/Theme.Holo.Light"/>
 
         <activity
             android:name=".Activities.ProfileActivity"
-            android:theme="@style/AppTheme"/>
+            android:theme="@style/Theme.AppCompat.Light"/>
+
+        <activity
+            android:name=".Activities.Statistics.TeamStats"
+            android:theme="@android:style/Theme.Holo.Light"/>
+
+        <activity
+            android:name=".Activities.Statistics.MyStats"
+            android:theme="@android:style/Theme.Holo.Light"/>
 
         <service android:name=".Activities.ServerService"/>
     </application>
