adding graph deatures to my game stats

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -84,6 +84,11 @@
             android:theme="@style/Theme.AppCompat.Light" />
 
 
+        <activity
+            android:name=".Activities.Statistics.MyGameStats"
+            android:theme="@style/Theme.AppCompat.Light" />
+
+
 
         <service android:name=".Activities.ServerService"/>
     </application>
