--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -88,7 +88,9 @@
             android:name=".Activities.Statistics.MyGameStats"
             android:theme="@style/Theme.AppCompat.Light" />
 
-
+        <activity
+            android:name=".Activities.Statistics.AnalyseStats"
+            android:theme="@style/Theme.AppCompat.Light" />
 
         <service android:name=".Activities.ServerService"/>
     </application>
