adding in log game stats

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -96,6 +96,10 @@
             android:name=".Activities.Statistics.Selection"
             android:theme="@style/Theme.AppCompat.Light" />
 
+        <activity
+            android:name=".Activities.LogGameStats"
+            android:theme="@style/Theme.AppCompat.Light" />
+
         <service android:name=".Activities.ServerService"/>
     </application>
 
