linked in game log buttons together, no button pressed code yet

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -100,6 +100,10 @@
             android:name=".Activities.LogGameStats"
             android:theme="@style/Theme.AppCompat.Light" />
 
+        <activity
+            android:name=".Activities.SelectKPI"
+            android:theme="@style/Theme.AppCompat.Light" />
+
         <service android:name=".Activities.ServerService"/>
     </application>
 
