--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -104,7 +104,12 @@
             android:name=".Activities.SelectKPI"
             android:theme="@style/Theme.AppCompat.Light" />
 
-        <service android:name=".Activities.ServerService"/>
+        <activity
+            android:name=".Activities.TestingNetworkActivity"
+            android:theme="@style/Theme.AppCompat.Light" />
+
+
+        <service android:name=".Activities.NetworkService"/>
     </application>
 
 </manifest>
