team leaderboard activity done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -108,6 +108,10 @@
             android:name=".Activities.TestingNetworkActivity"
             android:theme="@style/Theme.AppCompat.Light" />
 
+        <activity
+            android:name=".Activities.Statistics.TeamStatsLeaderboard"
+            android:theme="@style/Theme.AppCompat.Light" />
+
 
         <service android:name=".Activities.NetworkService"/>
     </application>
