--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -120,6 +120,11 @@
             android:name=".Activities.Statistics.TeamStatsOverview"
             android:theme="@android:style/Theme.Holo.Light"/>
 
+
+        <activity
+            android:name=".Activities.Log.FixtureStatsSummary"
+            android:theme="@android:style/Theme.Holo.Light"/>
+
         <service android:name=".Activities.NetworkService"/>
     </application>
 
