--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@android:style/Theme.Holo.Light">
+        android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
         <activity
             android:name=".Activities.SignIn.LoginActivity"
             android:label="@string/app_name"
@@ -29,44 +29,44 @@
 
         <activity
             android:name=".Activities.HomeActivity"
-            android:theme="@style/ThemeTwo"/>
+           />
 
         <activity
             android:name=".Activities.Notices.NoticeActivity"
-            android:theme="@style/Theme.ThemeOne.Light"/>
+            />
 
         <activity
             android:name=".Activities.Notices.NoticeComposeActivity"
-            android:theme="@style/Theme.ThemeOne.Light"/>
+            />
 
         <activity
             android:name=".Activities.Statistics.StatisticsActivity"
-            android:theme="@style/Theme.ThemeOne.Light"/>
+            />
 
         <activity
             android:name=".Activities.Log.LogActivity"
-            android:theme="@android:style/Theme.Holo.Light"/>
+            />
 
         <activity
             android:name=".Activities.CalendarActivity"
-            android:theme="@android:style/Theme.Holo.Light"/>
+            />
 
         <activity
             android:name=".Activities.GalleryActivity"
-            android:theme="@android:style/Theme.Holo.Light"/>
+           />
 
         <activity
             android:name=".Activities.Members.MembersActivity"
-            android:theme="@android:style/Theme.Holo.Light"/>
+            />
 
 
         <activity
             android:name=".Activities.SignIn.RegisterActivity"
-            android:theme="@android:style/Theme.Holo.Light"/>
+           />
 
         <activity
             android:name=".Test.TestDatabaseActivity"
-            android:theme="@android:style/Theme.Holo.Light"/>
+           />
 
         <activity
             android:name=".Activities.ProfileActivity"
@@ -74,56 +74,56 @@
 
         <activity
             android:name=".Activities.Log.GameTeamListSetUp"
-            android:theme="@android:style/Theme.Holo.Light"/>
+            />
 
         <activity
             android:name=".Activities.Statistics.MyStats"
-            android:theme="@android:style/Theme.Holo.Light"/>
+          />
 
         <activity
             android:name=".Activities.Statistics.MySCStats"
-            android:theme="@android:style/Theme.Holo.Light"/>
+         />
 
         <activity
             android:name=".Activities.Statistics.MyGameStats"
-            android:theme="@android:style/Theme.Holo.Light"/>
+         />
 
         <activity
             android:name=".Activities.Statistics.AnalyseStats"
-            android:theme="@android:style/Theme.Holo.Light"/>
+            />
         
         <activity
             android:name=".Activities.Statistics.Selection"
-            android:theme="@android:style/Theme.Holo.Light"/>
+          />
 
         <activity
             android:name=".Activities.Log.LogGameStats"
-            android:theme="@android:style/Theme.Holo.Light"/>
+           />
 
         <activity
             android:name=".Activities.Log.SelectKPI"
-            android:theme="@android:style/Theme.Holo.Light"/>
+          />
 
         <activity
             android:name=".Activities.TestingNetworkActivity"
-            android:theme="@android:style/Theme.Holo.Light"/>
+          />
 
         <activity
             android:name=".Activities.Statistics.TeamStatsLeaderboard"
-            android:theme="@android:style/Theme.Holo.Light"/>
+          />
 
         <activity
             android:name=".Activities.Statistics.TeamStatsGame"
-            android:theme="@android:style/Theme.Holo.Light"/>
+        />
 
         <activity
             android:name=".Activities.Statistics.TeamStatsOverview"
-            android:theme="@android:style/Theme.Holo.Light"/>
+          />
 
 
         <activity
             android:name=".Activities.Log.FixtureStatsSummary"
-            android:theme="@android:style/Theme.Holo.Light"/>
+           />
 
         <service android:name=".Activities.NetworkService"/>
     </application>
