--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
 
         <activity
             android:name=".Activities.HomeActivity"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
            />
 
         <activity
@@ -41,6 +42,8 @@
 
         <activity
             android:name=".Activities.Statistics.StatisticsActivity"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
+
             />
 
         <activity
@@ -78,7 +81,9 @@
 
         <activity
             android:name=".Activities.Statistics.MyStats"
-          />
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
+
+            />
 
         <activity
             android:name=".Activities.Statistics.MySCStats"
