--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -110,7 +110,7 @@
           />
 
         <activity
-            android:name=".Activities.TestingNetworkActivity"
+            android:name=".Test.TestingNetworkActivity"
           />
 
         <activity
