set training session

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -132,6 +132,11 @@
             android:name=".Activities.Log.FixtureStatsSummary"
            />
 
+        <activity
+            android:name=".Activities.Log.TrainingSetUp"
+            />
+
+
         <service android:name=".Activities.NetworkService"/>
     </application>
 
