add new session log

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -136,6 +136,8 @@
             android:name=".Activities.Log.TrainingSetUp"
             />
 
+        <activity android:name=".Activities.Log.LogScSession"/>
+
 
         <service android:name=".Activities.NetworkService"/>
     </application>
