--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:name=".App.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="RUMMA"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
@@ -75,7 +75,7 @@
 
         <activity
             android:name=".Activities.ProfileActivity"
-            android:theme="@android:style/Theme.Holo.Light"/>
+           />
 
         <activity
             android:name=".Activities.Log.GameTeamListSetUp"
@@ -138,8 +138,20 @@
 
         <activity android:name=".Activities.Log.LogScSession"/>
 
+        <activity android:name=".Activities.Log.LogFeedback"/>
+
+        <activity android:name=".Activities.Log.PreviousFeedback"/>
+
+        <activity android:name=".Activities.Statistics.MyFeedback"/>
+
+        <activity android:name=".Activities.SignIn.RegisterHelp"/>
+
+        <activity android:name=".Activities.SignIn.CreateNewTeam"/>
+
+        <activity android:name=".Activities.SignIn.AddTeamFix"/>
 
         <service android:name=".Activities.NetworkService"/>
+
     </application>
 
 </manifest>
